chore: updated README